# pepp_mlff_finetune

./: .gitignore  README.md  pyproject.toml
configs/data/: cp2k_patch_dataset.yaml
configs/model/: mace_mh.yaml  mace_mh0.yaml  mace_mh1.yaml
configs/runs/: batch2a_mace_mh0.yaml
configs/train/: e0s_cp2k_reference.yaml  mace_finetune.yaml
configs/validate/: validation.yaml
docs/: emc_mace_md_policy.md  workflow.md
hpc/slurm/: finetune_mace.sbatch  validate_mace.sbatch
manifests/: cp2k_patches.example.csv
scripts/: 00_check_pretrained_mace_off.py  00b_check_mace_cli.py  00c_evaluate_foundation_on_dataset.py  01_parse_cp2k_to_extxyz.py  02_split_dataset.py  03_finetune_mace.sh  04_validate_model.py  05_run_local_mace_mh_md.py  06_import_emc_system.py  07_lammps_thermal_relax_emc.py  07_run_initial_builder_mace_batch.py  08_watch_initial_builder_relax_and_run_mace.py  09_summarize_mace_md_batch.py  10_analyze_mace_md_validation.py
src/pepp_mlff/: __init__.py
src/pepp_mlff/analysis/: __init__.py  mace_md_summary.py  trajectory_validation.py
src/pepp_mlff/config/: load_config.py
src/pepp_mlff/data/: __init__.py  build_dataset.py  check_dataset.py  split_dataset.py
src/pepp_mlff/export/: export_mace.py
src/pepp_mlff/io/: __init__.py  cp2k_reader.py  extxyz_writer.py  lammps_topology.py
src/pepp_mlff/utils/: logging.py  (+2 more)
tests/: test_command_builder.py  test_imports.py  test_initial_builder_batch.py  test_initial_builder_watcher.py  test_lammps_topology.py  test_mace_md_summary.py  test_pretrained_mace.py  test_trajectory_validation.py  test_units.py
(+6 files in other folders)
